WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129659
[GTK] Fix some simple gtkdoc warnings for WebKit1
https://bugs.webkit.org/show_bug.cgi?id=129659
Summary
[GTK] Fix some simple gtkdoc warnings for WebKit1
Martin Robinson
Reported
2014-03-03 21:22:47 PST
WebKit1 is isn't the future, but neither are build warnings.
Attachments
Patch
(3.85 KB, patch)
2014-03-03 21:37 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2014-03-03 21:37:36 PST
Created
attachment 225740
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-03-03 23:28:25 PST
Comment on
attachment 225740
[details]
Patch Thanks
Martin Robinson
Comment 3
2014-03-03 23:30:22 PST
Comment on
attachment 225740
[details]
Patch Clearing flags on attachment: 225740 Committed
r165042
: <
http://trac.webkit.org/changeset/165042
>
Martin Robinson
Comment 4
2014-03-03 23:30:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug