[GTK] Fix some simple gtkdoc warnings for WebKit1 https://bugs.webkit.org/show_bug.cgi?id=129659

Reviewed by Carlos Garcia Campos.

* docs/webkitgtk-sections.txt: Make public some enum documentation that is used
in public APIs.
* webkit/webkitwebview.cpp: Fix typos and add documentation for enums previously
marked as private.
(webkit_web_view_class_init):
* webkit/webkitwebview.h: Ditto.

Canonical link: https://commits.webkit.org/147708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165042 268f45cc-cd09-0410-ab3c-d52691b4dbfc